# imdtrack

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml  update-dataset.yml
conda/: README.md  meta.yaml
data/: manifest.json  observations.parquet  remarks.parquet  storms.parquet
docs/: api.md  conf.py  index.md  installation.md  userguide.md
docs/examples/: climatology.py  plotting.py  quickstart.py
docs/userguide/: datamodel.md  loading.md  quality.md  updates.md
src/imdtrack/: __init__.py  _repo.py  _schema.py  cli.py  core.py  dataset.py  fetch.py  parse.py  pipeline.py  plot.py  qc.py  store.py  validate.py
tests/: test_load.py  test_parse.py  test_pipeline.py  test_plot.py  test_qc.py
