[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "imdtrack"
dynamic = ["version"]
description = "A Python library for the IMD RSMC New Delhi North Indian Ocean cyclone best-track record, kept up to date automatically."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "BSD-3-Clause" }
authors = [{ name = "Hamid Ali Syed" }]
keywords = ["cyclone", "best-track", "IMD", "meteorology", "xarray", "pandas", "north-indian-ocean"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pandas>=1.5",
    "pyarrow>=10.0",
]

[project.optional-dependencies]
xarray = ["xarray>=2022.3", "numpy>=1.21"]
# Parsing the raw IMD workbook (the update pipeline) needs openpyxl.
pipeline = ["openpyxl>=3.0"]
lint = ["black>=24.0", "ruff>=0.5"]
docs = [
    "sphinx>=7",
    "pydata-sphinx-theme>=0.15",
    "myst-nb>=1.0",
    "jupytext>=1.16",
    "ipykernel>=6",
    "matplotlib>=3.6",
    # The example notebooks use .to_xarray(); keep docs self-sufficient so the
    # Read the Docs build (which installs only the [docs] extra) succeeds.
    "xarray>=2022.3",
    "numpy>=1.21",
]
all = ["xarray>=2022.3", "numpy>=1.21", "openpyxl>=3.0"]
dev = [
    "pytest>=7", "pytest-cov>=4", "xarray>=2022.3", "numpy>=1.21",
    "pyarrow>=10.0", "openpyxl>=3.0", "black>=24.0", "ruff>=0.5",
]

[project.scripts]
imdtrack = "imdtrack.cli:main"

[project.urls]
Homepage = "https://rsmcnewdelhi.imd.gov.in/"

[tool.hatch.version]
path = "src/imdtrack/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/imdtrack"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
extend-exclude = ["docs/examples"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
# Keep Optional[X]/Union for readability under the py39 target.
ignore = ["E203", "UP007", "UP045"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["imdtrack"]
branch = true

[tool.coverage.report]
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
